--- a/Museum_FAQ_Chatbot.ipynb
+++ b/Museum_FAQ_Chatbot.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMUDZxt4MX1H7LSvFEt2IhC",
+      "authorship_tag": "ABX9TyOWv2KfQ57UenvdIN/KsDjt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4833,7 +4833,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "In this is a small Google Colab project I am going to build a chatbot that is able to answer questions based on a museum FAQ list."
+        "In this small Google Colab project I am going to build a chatbot that is able to answer questions based on a museum FAQ list."
       ],
       "metadata": {
         "id": "d4EiJBSVBN0l"
@@ -4942,7 +4942,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "pPK_HZgwR1G8"
       },
@@ -4960,7 +4960,7 @@
       "metadata": {
         "id": "RqrkaYofJUJN"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4971,7 +4971,7 @@
       "metadata": {
         "id": "GEz1Y6UQJeFb"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4982,7 +4982,7 @@
       "metadata": {
         "id": "J-qfF6_aJfXK"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4997,7 +4997,7 @@
         "id": "qek2UOlKScQT",
         "outputId": "1c2674c5-fabe-4c5a-960f-44b82f8c75f2"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5060,7 +5060,7 @@
       "metadata": {
         "id": "xnF5ecBSSmuG"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5075,7 +5075,7 @@
         "id": "XeEpNaq-TFgG",
         "outputId": "04965d30-4353-4ca2-d913-32b3840cb9b3"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5101,7 +5101,7 @@
         "id": "nzax0T75TIee",
         "outputId": "6861a06d-31f3-453c-b46b-c88ec56c511c"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5145,7 +5145,7 @@
         "id": "BZtSD6vfTmmp",
         "outputId": "0aa1471f-5429-4ed8-8a78-a5710bf49714"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5184,7 +5184,7 @@
         "id": "-hK7WYkhTmpX",
         "outputId": "be978e42-c5c2-458a-a17a-d44f044977c9"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5214,7 +5214,7 @@
         "id": "fLrzcKEgUbCV",
         "outputId": "c5e7cdb9-0d9e-4e2f-ecea-e47ac2530ab7"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5248,7 +5248,7 @@
       "metadata": {
         "id": "TIxSZiTcUqFO"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5263,7 +5263,7 @@
         "id": "uGBTSHIHWpv5",
         "outputId": "b440211f-6a67-4551-cc27-04491b1ab9f7"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5361,7 +5361,7 @@
       "metadata": {
         "id": "2vZcKOO1XxnO"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5376,7 +5376,7 @@
         "id": "vCkNjbyhX4g_",
         "outputId": "d2e185e9-c5c3-494e-8d53-3a4aae3d8d88"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5410,7 +5410,7 @@
       "metadata": {
         "id": "n8wDEbYPYKgv"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5425,7 +5425,7 @@
         "id": "sIxZR_TOYQn2",
         "outputId": "67d5c0f3-3ada-4948-ef1e-a6a20803a627"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5528,7 +5528,7 @@
         "id": "5y_389zHYqTd",
         "outputId": "fcfc8e7d-98c5-40c0-e7c5-3b127e8cd00e"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5562,7 +5562,7 @@
         "id": "_o32ggOAYvjH",
         "outputId": "ac3738d7-a2ec-4253-b0a0-1986904711a4"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5588,7 +5588,7 @@
         "id": "YDuopcSycGfr",
         "outputId": "f1915560-7e5e-491a-d256-94d198b8c6a5"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5637,7 +5637,7 @@
       "metadata": {
         "id": "0AN0Rtq8c2ta"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5654,7 +5654,7 @@
         "id": "NnlAH5GWdPRt",
         "outputId": "243422cd-bb5b-4d19-f7cf-d76076d6c2b1"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5865,7 +5865,7 @@
       "metadata": {
         "id": "_jSXi2n4fEO8"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5890,7 +5890,7 @@
         "id": "MMINixOG06Ta",
         "outputId": "7ec9447e-174d-4477-97e5-235954484788"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5913,7 +5913,7 @@
         },
         "outputId": "7e913b56-1759-48e9-a3ad-61d78b68532f"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5952,7 +5952,7 @@
       "metadata": {
         "id": "K_nUrcpfYOIA"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5972,7 +5972,7 @@
         "id": "L6SWcI6w5x7h",
         "outputId": "65a85a0a-9574-4ed6-d24d-5500f64e4a70"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6199,7 +6199,7 @@
         "id": "70V4AZiq5x8X",
         "outputId": "4e305044-71ff-43a4-8f88-f4dc9538381b"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6294,7 +6294,7 @@
         "id": "dAEEHeDN-q4U",
         "outputId": "03135c8e-db67-412d-ee93-ef5d5603d0e7"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6398,7 +6398,7 @@
         "id": "2-zF5kAM-1E4",
         "outputId": "aa4d8627-98f4-4feb-c998-7965d4109e4d"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6436,7 +6436,7 @@
       "metadata": {
         "id": "ujLBT3kC-1F9"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6460,7 +6460,7 @@
         "id": "fjEvyw2V-1P6",
         "outputId": "f2ccbbb1-24b5-4067-b874-4d7f8a598619"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6508,7 +6508,7 @@
         "id": "IZgz8sfY-1eO",
         "outputId": "c8a55d11-651a-4cc3-fd86-5d63327c2078"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6531,7 +6531,7 @@
       "metadata": {
         "id": "Z92NwjwEATjx"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6556,7 +6556,7 @@
         "id": "W6bhNSokATk3",
         "outputId": "31831a98-bd8b-4eed-f753-c7373a62fb60"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6598,7 +6598,7 @@
         "id": "FzxkgVQoATmp",
         "outputId": "77214e6a-cae7-4cf5-a345-eb8e3b2e876e"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6632,7 +6632,7 @@
       "metadata": {
         "id": "PoTJwH6lATp2"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6643,7 +6643,7 @@
       "metadata": {
         "id": "ZJrPi0J3ATse"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6692,7 +6692,7 @@
         "id": "sUeGBd90Alql",
         "outputId": "e7d1dd66-f508-4cc7-ff42-7199362f054a"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6728,7 +6728,7 @@
         "id": "NqtJgRRjAlog",
         "outputId": "6c7cb894-6cb2-4810-8ca4-9168a177c626"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6781,7 +6781,7 @@
         "id": "s48JV9LXhVs9",
         "outputId": "90b9f4ff-4963-49e1-c8b6-952fcf0052e8"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6852,7 +6852,7 @@
       "metadata": {
         "id": "nmnskKauhYBY"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7024,7 +7024,7 @@
         "id": "IBTtRBuuhyoA",
         "outputId": "9a4a96a9-f060-4115-ecc4-85ddc0aa19b4"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7253,7 +7253,7 @@
       "metadata": {
         "id": "9pF76x_ch2rP"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7268,7 +7268,7 @@
         "id": "vrLfhxNT6_Me",
         "outputId": "1b996ee6-f130-40b6-ad13-7172c8b9a8f2"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7294,7 +7294,7 @@
         "id": "XzXORrF9h_IW",
         "outputId": "74e5224e-9dbd-41eb-87e0-4c612cbe6549"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7320,7 +7320,7 @@
         "id": "mZDGTPhtiDsW",
         "outputId": "196bc201-ee67-4548-bbc8-9311bd7210b6"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7358,7 +7358,7 @@
         "id": "-z0xKdCcT90W",
         "outputId": "4ef8e618-ccca-4286-ead6-7c91bc32056f"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7384,7 +7384,7 @@
         "id": "zLj8hkYeUFeI",
         "outputId": "cd2ca4ca-abb6-4cdf-da64-4b7d43cda5ad"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7613,7 +7613,7 @@
       "metadata": {
         "id": "zoes3suVSOjX"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7628,7 +7628,7 @@
         "id": "1In-fSjpM3dM",
         "outputId": "45265cd7-f6d7-4d89-f52f-eb777ef948c3"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7654,7 +7654,7 @@
         "id": "2LnFW-TpU5Rs",
         "outputId": "f1e9c5a5-2e97-4763-d8e4-0336b3079c2e"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7680,7 +7680,7 @@
         "id": "kD7bBpVeTJYT",
         "outputId": "bed6aae4-8705-4a3b-8e57-9e4131aa1c66"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8473,7 +8473,7 @@
         "id": "0rFa28NaNerq",
         "outputId": "bd20e338-a034-4a50-ba94-b5fbd246399a"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8499,7 +8499,7 @@
         "id": "_IO168QYVuU7",
         "outputId": "bdcdfaa7-6c87-4799-f698-4270826fe233"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8562,7 +8562,7 @@
       "metadata": {
         "id": "BTg60f1n_ocG"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8643,7 +8643,7 @@
       "metadata": {
         "id": "cWW0P3BI_oeO"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8667,7 +8667,7 @@
         "id": "4SvHPKA6_ohW",
         "outputId": "642be3b5-844f-48ee-bf88-17fc64f6f8b5"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8723,7 +8723,7 @@
       "metadata": {
         "id": "IggahpWoXBLT"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8738,7 +8738,7 @@
         "id": "aFAzdVa_XBM6",
         "outputId": "bd1d6578-232a-4784-e5c2-e0cbd7f82aa6"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8799,7 +8799,7 @@
         "id": "SoNR5mWdYGrf",
         "outputId": "649cf8f7-5e76-4610-a273-8c3c6dceecc5"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8856,7 +8856,7 @@
         "id": "BsKiyT0aYRL4",
         "outputId": "fb144c07-b386-46de-8403-0864382db89a"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8882,7 +8882,7 @@
         "id": "5V1aC-IfYG4v",
         "outputId": "bc71652c-53ba-4041-b788-aaec8403dbb6"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8908,7 +8908,7 @@
         "id": "lz5d138feIzj",
         "outputId": "6fac70ef-3af0-4374-fc9e-2371281bc9c2"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8934,7 +8934,7 @@
         "id": "LPnh_SS1YaDC",
         "outputId": "bf22452e-6d0c-4bb9-9f4c-2ef78e416e1e"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9000,7 +9000,7 @@
         "id": "MEKvSwygYaEm",
         "outputId": "ec968c01-57aa-4af6-fa27-90924286be1f"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9052,7 +9052,7 @@
         "id": "tspLGrBFYaGA",
         "outputId": "f7435139-8f27-4abf-857e-f1032eedda7c"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9091,7 +9091,7 @@
         "id": "Xqrfm4LEYuZe",
         "outputId": "f5c587f6-ce9f-4345-eba2-ae6f4d7403da"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9163,7 +9163,7 @@
       "metadata": {
         "id": "AcGx1LO0p7RM"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9179,7 +9179,7 @@
         "id": "7BfMBTW0ZLNk",
         "outputId": "84c36127-5120-49cd-f3aa-9ab659ecc555"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9203,7 +9203,7 @@
         "id": "JAWV2MIiKcw9",
         "outputId": "4e407ed5-ef64-4b71-f4b3-a34c248081e4"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9246,7 +9246,7 @@
         "id": "DIUzhe3-ZuOq",
         "outputId": "06a864d2-6ad1-4e64-bea6-7267bc55db43"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9452,7 +9452,7 @@
       "metadata": {
         "id": "lrw3irYLjbeA"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9463,7 +9463,7 @@
       "metadata": {
         "id": "sL-i405IZygD"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9490,7 +9490,7 @@
         "id": "Pez-fbPzY6hm",
         "outputId": "8c373692-ad16-4eae-9278-41a11acb08d0"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
